--- a/CheapMarket/CheapMarket/Base.lproj/Main.storyboard
+++ b/CheapMarket/CheapMarket/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="crossDissolve" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +15,162 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LOGO + 57 +  58 +  59" translatesAutoresizingMaskIntoConstraints="NO" id="eOT-R0-IE6">
+                                <rect key="frame" x="176" y="20" width="225" height="208"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Senha" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="85S-9r-yps">
+                                <rect key="frame" x="94" y="310" width="398" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CKj-ds-aRb">
+                                <rect key="frame" x="94" y="497" width="159" height="44"/>
+                                <state key="normal" image="botao face">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Acw-IK-URd">
+                                <rect key="frame" x="91" y="376" width="401" height="48"/>
+                                <state key="normal" title="Button" image="botao login">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="btnLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4hV-b3-Lhd"/>
+                                    <segue destination="tJd-Qr-69G" kind="show" id="ZAe-8h-GKx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EdX-0x-A5g">
+                                <rect key="frame" x="358" y="448" width="134" height="30"/>
+                                <state key="normal" title="Esqueceu a senha?">
+                                    <color key="titleColor" red="0.10980392156862745" green="0.10980392156862745" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yx2-jU-PRW">
+                                <rect key="frame" x="94" y="255" width="398" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="0.29019607843137257" green="0.66274509803921566" blue="0.56470588235294117" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="txtLogin" destination="yx2-jU-PRW" id="teW-xz-owk"/>
+                        <outlet property="txtPass" destination="85S-9r-yps" id="jtu-Zi-X6e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="273" y="383"/>
+        </scene>
+        <!--Compras-->
+        <scene sceneID="7ab-kY-gbF">
+            <objects>
+                <viewController id="x8q-fg-Joh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9qR-V4-sCt"/>
+                        <viewControllerLayoutGuide type="bottom" id="gRf-ax-ORe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SHw-Ia-7g3">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Compras" image="icone compras" id="TGV-MI-TG0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mT4-AO-PeA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1753" y="391"/>
+        </scene>
+        <!--Amigos-->
+        <scene sceneID="Itm-aJ-53g">
+            <objects>
+                <viewController id="VeN-In-jYR" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2wp-rq-yrn"/>
+                        <viewControllerLayoutGuide type="bottom" id="tRf-aU-dLs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="TSi-ss-Of4">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Amigos" image="icone amigos" id="if6-ty-aJn"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F3v-t4-KtA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1659" y="1223"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="fbs-qu-toP">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="tJd-Qr-69G" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="7YY-9S-En9">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.10980392156862745" green="0.10980392156862745" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="0.98431372549019602" green="0.38823529411764707" blue="0.23921568627450981" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.10980392156862745" green="0.10980392156862745" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="x8q-fg-Joh" kind="relationship" relationship="viewControllers" id="13n-bb-KXP"/>
+                        <segue destination="VeN-In-jYR" kind="relationship" relationship="viewControllers" id="ygU-37-dbt"/>
+                        <segue destination="8pJ-wy-bY2" kind="relationship" relationship="viewControllers" id="4HG-85-ZgD"/>
+                        <segue destination="X0X-vv-5Fk" kind="relationship" relationship="viewControllers" id="Tre-js-ZI0"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xAn-Yf-RHl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="999" y="369"/>
+        </scene>
+        <!--Promoções-->
+        <scene sceneID="e4A-WT-fq7">
+            <objects>
+                <viewController id="X0X-vv-5Fk" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dsO-eS-u0O"/>
+                        <viewControllerLayoutGuide type="bottom" id="ila-Lf-BvH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JGX-or-ncV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Promoções" image="icone promo" id="gfA-jg-zFZ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bya-fI-pR6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1651" y="2627"/>
+        </scene>
+        <!--Mercados-->
+        <scene sceneID="1cv-MG-WXr">
+            <objects>
+                <viewController id="8pJ-wy-bY2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oYn-DB-PuF"/>
+                        <viewControllerLayoutGuide type="bottom" id="lWa-VI-8Tl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="WVR-UT-kjQ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Mercados" image="icone mapa" id="sda-vr-P0k"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Tt-MR-f4b" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1659" y="1929"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LOGO + 57 +  58 +  59" width="394" height="392"/>
+        <image name="botao face" width="299" height="84"/>
+        <image name="botao login" width="617" height="84"/>
+        <image name="icone amigos" width="48" height="23"/>
+        <image name="icone compras" width="26" height="31"/>
+        <image name="icone mapa" width="26" height="26"/>
+        <image name="icone promo" width="30" height="30"/>
+    </resources>
 </document>
